--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,9 @@
     <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+     <!-- Font Awesome -->
+   <script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +37,8 @@
       <a href="#">Pages</a>
       <a href="Blog.html">Blog</a>
       <a href="contact.html">Contact</a>
+      <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
    </nav>
 
    <div class="icons">
