--- a/Home.html
+++ b/Home.html
@@ -30,16 +30,41 @@
 
    <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
 
-   <nav class="navbar">
-      <div id="close-navbar" class="fas fa-times"></div>
-      <a href="Home.html">Home</a>
-      <a href="about.html">about</a>
-      <a href="#">Pages</a>
-      <a href="Blog.html">Blog</a>
-      <a href="contact.html">Contact</a>
-      <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
-      <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-   </nav>
+   <!-- Nav Bar -->
+   <nav class="navbar navbar-expand-md navbar-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Pages
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="about.html">about</a>
+              <a class="dropdown-item" href="#">testimonial</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a href="Blog.html" class="nav-link">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+        </ul>
+      </div>      
+    </nav>
 
 </header>
 
