--- a/contact.html
+++ b/contact.html
@@ -1,84 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- header section starts  -->
 
-<!-- header section starts  -->
+    <header class="header">
+      <a href="#" class="logo"><img src="images/logo.png" width="200px" /></a>
 
-<header class="header">
+      <nav class="navbar">
+        <div id="close-navbar" class="fas fa-times"></div>
+        <a href="Home.html">Home</a>
+        <a href="about.html">about</a>
+        <a href="#">Pages</a>
+        <a href="Blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+      </nav>
 
-    <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
- 
-    <nav class="navbar">
-       <div id="close-navbar" class="fas fa-times"></div>
-       <a href="Home.html">Home</a>
-       <a href="about.html">about</a>
-       <a href="#">Pages</a>
-       <a href="Blog.html">Blog</a>
-       <a href="contact.html">Contact</a>
-    </nav>
- 
-    <div class="icons">
-       <div id="account-btn" class="fas fa-user"></div>
-       <div id="menu-btn" class="fas fa-bars"></div>
+      <div class="icons">
+        <div id="account-btn" class="fas fa-user"></div>
+        <div id="menu-btn" class="fas fa-bars"></div>
+      </div>
+    </header>
+
+    <!-------------Red_Box----------------->
+
+    <div class="containerRedBox">
+      <span class="textRedBox"> Contact us </span>
     </div>
- 
- </header>
 
-<!-------------Red_Box----------------->
-
-<div class="containerRedBox">
-    <span class="textRedBox">
-        Contact us
-    </span>
- </div>
-
-<!---------offer--------->
-<section class="arrival_section">
-    <div class="container">
-       <div class="box">
+    <!---------offer--------->
+    <section class="arrival_section">
+      <div class="container">
+        <div class="box">
           <div class="arrival_bg_box">
-             <img src="images/arrival-bg.png" alt="" class="arrival_bg">
+            <img src="images/arrival-bg.png" alt="" class="arrival_bg" />
           </div>
           <div class="row">
-             <div class="col-md-6 ml-auto">
-                <div class="heading_container remove_line_bt">
-                   <h2>
-                      #NewArrivals
-                   </h2>
-                </div>
-                <p style="margin-top: 20px;margin-bottom: 2px;">
-                   Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
-                </p>
-                <a href="#" class="btn">
-                   <h3>Shop Now</h3>
-                </a>
-             </div>
+            <div class="col-md-6 ml-auto">
+              <div class="heading_container remove_line_bt">
+                <h2>#NewArrivals</h2>
+              </div>
+              <p style="margin-top: 20px; margin-bottom: 2px">
+                Vitae fugiat laboriosam officia perferendis provident aliquid
+                voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic?
+                Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique
+                ex unde!
+              </p>
+              <a href="#" class="btn">
+                <h3>Shop Now</h3>
+              </a>
+            </div>
           </div>
-       </div>
-    </div>
-  </section>
+        </div>
+      </div>
+    </section>
 
-  <!------ footer section---------->
+    <!------ footer section---------->
 
-<section class="footer">
-
-    <div class="box-container">
- 
-       <div class="box">
-          <h3> <i class=""></i> Famms </h3>
-          <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3><i class=""></i> Famms</h3>
+          <p>
+            <span id="footer-address">ADDRESS:</span> 28 White tower, Street
+            Name New York City, USA
+          </p>
           <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
           <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
-       </div>
- 
-       <div class="box">
+        </div>
+
+        <div class="box">
           <h3>MENU</h3>
           <a href="index.html" class="link">home</a>
           <a href="about.html" class="link">about</a>
@@ -86,9 +83,9 @@
           <a href="contact.html" class="link">Testimonial</a>
           <a href="contact.html" class="link">Blog</a>
           <a href="contact.html" class="link">contact</a>
-       </div>
- 
-       <div class="box">
+        </div>
+
+        <div class="box">
           <h3>ACCOUNT</h3>
           <a href="#" class="link">Account</a>
           <a href="#" class="link">Chechout</a>
@@ -96,22 +93,25 @@
           <a href="#" class="link">Register</a>
           <a href="#" class="link">Shopping</a>
           <a href="#" class="link">Widget</a>
-       </div>
- 
-       <div class="box">
+        </div>
+
+        <div class="box">
           <h3>NEWSLETTER</h3>
           <p>Subscribe by our newsletter and get update protidin.</p>
           <form action="">
-             <input type="email" name="" placeholder="enter your email" id="" class="email">
-             <input type="submit" value="subscribe" class="btn">
+            <input
+              type="email"
+              name=""
+              placeholder="enter your email"
+              id=""
+              class="email"
+            />
+            <input type="submit" value="subscribe" class="btn" />
           </form>
-       </div>
- 
-    </div>
- 
-    <div class="credit"> 2022 <span>@</span> | all rights reserved! </div>
- 
- </section>
+        </div>
+      </div>
 
-</body>
+      <div class="credit">2022 <span>@</span> | all rights reserved!</div>
+    </section>
+  </body>
 </html>
