--- a/Blog.html
+++ b/Blog.html
@@ -1,83 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- header section starts  -->
 
-<!-- header section starts  -->
+    <header class="header">
+      <a href="#" class="logo"><img src="images/logo.png" width="200px" /></a>
 
-<header class="header">
+      <nav class="navbar">
+        <div id="close-navbar" class="fas fa-times"></div>
+        <a href="Home.html">Home</a>
+        <a href="about.html">about</a>
+        <a href="#">Pages</a>
+        <a href="#">Blog</a>
+        <a href="contact.html">Contact</a>
+      </nav>
 
-    <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
- 
-    <nav class="navbar">
-       <div id="close-navbar" class="fas fa-times"></div>
-       <a href="Home.html">Home</a>
-       <a href="about.html">about</a>
-       <a href="#">Pages</a>
-       <a href="#">Blog</a>
-       <a href="contact.html">Contact</a>
-    </nav>
- 
-    <div class="icons">
-       <div id="account-btn" class="fas fa-user"></div>
-       <div id="menu-btn" class="fas fa-bars"></div>
+      <div class="icons">
+        <div id="account-btn" class="fas fa-user"></div>
+        <div id="menu-btn" class="fas fa-bars"></div>
+      </div>
+    </header>
+
+    <!-------------Red_Box----------------->
+
+    <div class="containerRedBox">
+      <span class="textRedBox"> Blog List </span>
     </div>
- 
- </header>
 
- <!-------------Red_Box----------------->
+    <!-- subjects section  -->
 
-<div class="containerRedBox">
-    <span class="textRedBox">
-        Blog List
-    </span>
- </div>
-
- <!-- subjects section  -->
-
-<section class="subjects">
-    <h1 class="heading">Why Shop With Us</h1>
-    <div class="box-container">
-       <div class="box">
-          <img src="images/free.png" alt="">
+    <section class="subjects">
+      <h1 class="heading">Why Shop With Us</h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="images/free.png" alt="" />
           <h3>Fast Delivery</h3>
-          <p>variations of passages of Lorem<br> Ipsum available.</p>
-       </div>
- 
-       <div class="box">
-          <img src="images/shipped.png" alt="">
+          <p>
+            variations of passages of Lorem<br />
+            Ipsum available.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="images/shipped.png" alt="" />
           <h3>Free Shipping</h3>
-          <p>variations of passages of Lorem<br> Ipsum available.</p>
-       </div>
- 
-       <div class="box">
-          <img src="images/medal.png" alt="">
+          <p>
+            variations of passages of Lorem<br />
+            Ipsum available.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="images/medal.png" alt="" />
           <h3>Best Quality</h3>
-          <p>variations of passages of Lorem<br> Ipsum available.</p>
-       </div>
-    </div>
- </section>
+          <p>
+            variations of passages of Lorem<br />
+            Ipsum available.
+          </p>
+        </div>
+      </div>
+    </section>
 
-  <!------ footer section---------->
+    <!------ footer section---------->
 
-<section class="footer">
-
-    <div class="box-container">
- 
-       <div class="box">
-          <h3> <i class=""></i> Famms </h3>
-          <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3><i class=""></i> Famms</h3>
+          <p>
+            <span id="footer-address">ADDRESS:</span> 28 White tower, Street
+            Name New York City, USA
+          </p>
           <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
           <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
-       </div>
- 
-       <div class="box">
+        </div>
+
+        <div class="box">
           <h3>MENU</h3>
           <a href="index.html" class="link">home</a>
           <a href="about.html" class="link">about</a>
@@ -85,9 +90,9 @@
           <a href="contact.html" class="link">Testimonial</a>
           <a href="contact.html" class="link">Blog</a>
           <a href="contact.html" class="link">contact</a>
-       </div>
- 
-       <div class="box">
+        </div>
+
+        <div class="box">
           <h3>ACCOUNT</h3>
           <a href="#" class="link">Account</a>
           <a href="#" class="link">Chechout</a>
@@ -95,22 +100,25 @@
           <a href="#" class="link">Register</a>
           <a href="#" class="link">Shopping</a>
           <a href="#" class="link">Widget</a>
-       </div>
- 
-       <div class="box">
+        </div>
+
+        <div class="box">
           <h3>NEWSLETTER</h3>
           <p>Subscribe by our newsletter and get update protidin.</p>
           <form action="">
-             <input type="email" name="" placeholder="enter your email" id="" class="email">
-             <input type="submit" value="subscribe" class="btn">
+            <input
+              type="email"
+              name=""
+              placeholder="enter your email"
+              id=""
+              class="email"
+            />
+            <input type="submit" value="subscribe" class="btn" />
           </form>
-       </div>
- 
-    </div>
- 
-    <div class="credit"> 2022 <span>@</span> | all rights reserved! </div>
- 
-</section>
+        </div>
+      </div>
 
-</body>
+      <div class="credit">2022 <span>@</span> | all rights reserved!</div>
+    </section>
+  </body>
 </html>
