--- a/about.html
+++ b/about.html
@@ -1,164 +1,195 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- font awesome cdn link  -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>About us</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <!-- header section starts  -->
 
-<!-- header section starts  -->
+    <header class="header">
+      <a href="#" class="logo"><img src="images/logo.png" width="200px" /></a>
 
-<header class="header">
+      <nav class="navbar">
+        <div id="close-navbar" class="fas fa-times"></div>
+        <a href="Home.html">Home</a>
+        <a href="about.html">about</a>
+        <a href="#">Pages</a>
+        <a href="Blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+      </nav>
 
-   <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
+      <div class="icons">
+        <div id="account-btn" class="fas fa-user"></div>
+        <div id="menu-btn" class="fas fa-bars"></div>
+      </div>
+    </header>
 
-   <nav class="navbar">
-      <div id="close-navbar" class="fas fa-times"></div>
-      <a href="Home.html">Home</a>
-      <a href="about.html">about</a>
-      <a href="#">Pages</a>
-      <a href="Blog.html">Blog</a>
-      <a href="contact.html">Contact</a>
-   </nav>
+    <!-------------Red_Box----------------->
 
-   <div class="icons">
-      <div id="account-btn" class="fas fa-user"></div>
-      <div id="menu-btn" class="fas fa-bars"></div>
-   </div>
+    <div class="containerRedBox">
+      <span class="textRedBox"> About us </span>
+    </div>
 
-</header>
+    <!-- subjects section  -->
 
-<!-------------Red_Box----------------->
-
-<div class="containerRedBox">
-   <span class="textRedBox">
-      About us
-   </span>
-</div>
-
-<!-- subjects section  -->
-
-<section class="subjects">
-  <h1 class="heading">Why Shop With Us</h1>
-  <div class="box-container">
-     <div class="box">
-        <img src="images/free.png" alt="">
-        <h3>Fast Delivery</h3>
-        <p>variations of passages of Lorem<br> Ipsum available.</p>
-     </div>
-
-     <div class="box">
-        <img src="images/shipped.png" alt="">
-        <h3>Free Shipping</h3>
-        <p>variations of passages of Lorem<br> Ipsum available.</p>
-     </div>
-
-     <div class="box">
-        <img src="images/medal.png" alt="">
-        <h3>Best Quality</h3>
-        <p>variations of passages of Lorem<br> Ipsum available.</p>
-     </div>
-  </div>
-</section>
-
-<!---------offer--------->
-<section class="arrival_section">
-  <div class="container">
-     <div class="box">
-        <div class="arrival_bg_box">
-           <img src="images/arrival-bg.png" alt="" class="arrival_bg">
+    <section class="subjects">
+      <h1 class="heading">Why Shop With Us</h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="images/free.png" alt="" />
+          <h3>Fast Delivery</h3>
+          <p>
+            variations of passages of Lorem<br />
+            Ipsum available.
+          </p>
         </div>
-        <div class="row">
-           <div class="col-md-6 ml-auto">
+
+        <div class="box">
+          <img src="images/shipped.png" alt="" />
+          <h3>Free Shipping</h3>
+          <p>
+            variations of passages of Lorem<br />
+            Ipsum available.
+          </p>
+        </div>
+
+        <div class="box">
+          <img src="images/medal.png" alt="" />
+          <h3>Best Quality</h3>
+          <p>
+            variations of passages of Lorem<br />
+            Ipsum available.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!---------offer--------->
+    <section class="arrival_section">
+      <div class="container">
+        <div class="box">
+          <div class="arrival_bg_box">
+            <img src="images/arrival-bg.png" alt="" class="arrival_bg" />
+          </div>
+          <div class="row">
+            <div class="col-md-6 ml-auto">
               <div class="heading_container remove_line_bt">
-                 <h2>
-                    #NewArrivals
-                 </h2>
+                <h2>#NewArrivals</h2>
               </div>
-              <p style="margin-top: 20px;margin-bottom: 2px;">
-                 Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
+              <p style="margin-top: 20px; margin-bottom: 2px">
+                Vitae fugiat laboriosam officia perferendis provident aliquid
+                voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic?
+                Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique
+                ex unde!
               </p>
               <a href="#" class="btn">
-                 <h3>Shop Now</h3>
+                <h3>Shop Now</h3>
               </a>
-           </div>
+            </div>
+          </div>
         </div>
-     </div>
-  </div>
-</section>
+      </div>
+    </section>
 
-<!------ footer section---------->
+    <!------ footer section---------->
 
-<section class="footer">
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3><i class=""></i> Famms</h3>
+          <p>
+            <span id="footer-address">ADDRESS:</span> 28 White tower, Street
+            Name New York City, USA
+          </p>
+          <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
+          <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
+        </div>
 
-   <div class="box-container">
+        <div class="box">
+          <h3>MENU</h3>
+          <a href="index.html" class="link">home</a>
+          <a href="about.html" class="link">about</a>
+          <a href="courses.html" class="link">Services</a>
+          <a href="contact.html" class="link">Testimonial</a>
+          <a href="contact.html" class="link">Blog</a>
+          <a href="contact.html" class="link">contact</a>
+        </div>
 
-      <div class="box">
-         <h3> <i class=""></i> Famms </h3>
-         <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
-         <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
-         <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
+        <div class="box">
+          <h3>ACCOUNT</h3>
+          <a href="#" class="link">Account</a>
+          <a href="#" class="link">Chechout</a>
+          <a href="#" class="link">Login</a>
+          <a href="#" class="link">Register</a>
+          <a href="#" class="link">Shopping</a>
+          <a href="#" class="link">Widget</a>
+        </div>
+
+        <div class="box">
+          <h3>NEWSLETTER</h3>
+          <p>Subscribe by our newsletter and get update protidin.</p>
+          <form action="">
+            <input
+              type="email"
+              name=""
+              placeholder="enter your email"
+              id=""
+              class="email"
+            />
+            <input type="submit" value="subscribe" class="btn" />
+          </form>
+        </div>
       </div>
 
-      <div class="box">
-         <h3>MENU</h3>
-         <a href="index.html" class="link">home</a>
-         <a href="about.html" class="link">about</a>
-         <a href="courses.html" class="link">Services</a>
-         <a href="contact.html" class="link">Testimonial</a>
-         <a href="contact.html" class="link">Blog</a>
-         <a href="contact.html" class="link">contact</a>
-      </div>
-
-      <div class="box">
-         <h3>ACCOUNT</h3>
-         <a href="#" class="link">Account</a>
-         <a href="#" class="link">Chechout</a>
-         <a href="#" class="link">Login</a>
-         <a href="#" class="link">Register</a>
-         <a href="#" class="link">Shopping</a>
-         <a href="#" class="link">Widget</a>
-      </div>
-
-      <div class="box">
-         <h3>NEWSLETTER</h3>
-         <p>Subscribe by our newsletter and get update protidin.</p>
-         <form action="">
-            <input type="email" name="" placeholder="enter your email" id="" class="email">
-            <input type="submit" value="subscribe" class="btn">
-         </form>
-      </div>
-
-   </div>
-
-   <div class="credit"> 2022 <span>@</span> | all rights reserved! </div>
-
-</section>
+      <div class="credit">2022 <span>@</span> | all rights reserved!</div>
+    </section>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-</body>
+  </body>
 </html>
