--- a/Home.html
+++ b/Home.html
@@ -296,10 +296,13 @@
         <div class="box">
           <div class="row-1">
             <div class="col-md-6">
-              <div class="heading_container remove_line_bt">
+              <div class="heading_container remove_line_bt text-center">
                 <h2>Subscribe To Get Discount Offers</h2>
               </div>
-              <p style="margin-top: 20px; margin-bottom: 2px">
+              <p
+                style="margin-top: 20px; margin-bottom: 30px"
+                class="text-center"
+              >
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor
               </p>
