--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a href="index.html" class="nav-link">Home</a>
+                  <a href="Home.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
